<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tiny World 4 Droid</string>
    <string name="action_settings">Settings</string>
    <string name="game_canvas">game canvas</string>
    <string name="action_back">Back</string>
    <string name="action_forward">Forward</string>
    <string name="action_play">Play</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="use">Use</string>
    <string name="close">Close</string>
    <string name="move">Move</string>
    <string name="content_description">Game content is rendered here</string>

</resources>
